--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ p {
 }
 p {
   color: #657b83;
-    background-color: #f5c530;
+    background-color: #fdf6e3;
 }
 .second-paragraph {
   color: #b58900;
